--- a/project-1-expanding-cards/style.css
+++ b/project-1-expanding-cards/style.css
@@ -9,11 +9,16 @@
 body {
   font-family: 'Muli', sans-serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   background-image: linear-gradient(to bottom left, rgb(159, 182, 245), rgb(13, 50, 216));
+}
+
+h1 {
+  color: #fff;
 }
 
 .container {
